--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
     We Are Australias Leading Javascript Developer.
+    <marquee><img src="jsaudev.png"></marquee>
 </body>
 </html>
