Add Favicon and spice up the layout

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>Australias Leading Javascript Developer</title>
+    <link rel="icon" type="image/png" href="jsaudev.png">
 </head>
 <body>
-    We Are Australias Leading Javascript Developer.
+    <h1>We Are Australias Leading Javascript Developer.</h1>
     <marquee><img src="jsaudev.png"></marquee>
 
 
