--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
         ga('create', 'UA-79260868-1', 'auto');
         ga('send', 'pageview');
     </script>
+    <script src="scripts/popups.js"></script>
 </body>
 </html>
