Less cowboy punktuation.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Australias Leading Javascript Developer</title>
+    <title>Australia&rsquo;s Leading Javascript Developer.</title>
     <link rel="icon" type="image/png" href="jsaudev.png">
     <link rel="stylesheet" type="text/css" href="styles/index.css">
 
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <h1>We Are Australias Leading Javascript Developer.</h1>
+    <h1>We Are Australia&rsquo;s Leading Javascript Developer.</h1>
     <marquee><img src="jsaudev.png"></marquee>
     <marquee><div class="members"></div></marquee>
     <br><br><br><br><br><br><br>
